[tool.poetry]
name = "findout-in-comment"
version = "0.1.1"
description = "A pre-attack hacker tool to find out sensitives comments in HTML"
authors = ["Pablo Emidio <p.emidiodev@gmail.com>"]
repository = "https://github.com/PabloEmidio/Findout-in-Comment"
license = "MIT"
readme = "README.md"
packages = [{include = "findout"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.25.1,<2.26.0"
parsel = ">=1.6.0,<1.7.0"


[tool.poetry.scripts]
findout = "findout.findout:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
