[tool.poetry]
name = "findout-in-comment"
version = "0.1.1"
description = "A pre-attack hacker tool to find out sensitives comments in HTML"
authors = ["Pablo Emidio <p.emidiodev@gmail.com>"]
repository = "https://github.com/PabloEmidio/Findout-in-Comment"
license = "MIT"
readme = "README.md"
packages = [{include = "findout"}, {include = "findout/py.typed"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = ">=2.25.1,<2.26.0"
parsel = ">=1.6.0,<1.7.0"

[tool.poetry.scripts]
findout = "findout.findout:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
black = "^22.12.0"
flake8-bugbear = "^22.12.6"
mypy = "^0.991"
pyupgrade = "^3.3.1"
types-requests = "^2.28.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
src_paths = ["findout"]
profile = "black"
multi_line_output = 1
lines_after_imports = 2
lines_between_types = 1
add_imports = ["from __future__ import annotations"]

[tool.mypy]
ignore_missing_imports = true
